--- a/suplier-service/src/main/resources/application.properties
+++ b/suplier-service/src/main/resources/application.properties
@@ -4,3 +4,4 @@ keycloak.auth-server-url=http://localhost:8080/auth/
 keycloak.resource=products-app
 keycloak.public-client=false
 keycloak.bearer-only=true
+keycloak.cors=true
